--- a/demo/src/common/headerApp.css
+++ b/demo/src/common/headerApp.css
@@ -1,20 +1,5 @@
 @import url(./color.css);
-
- .btn-2 {
-  background-color: transparent;
-  color: var(--primary-color);
-  border: 2px solid var(--primary-color);
-  text-decoration: none;
-}
-.btn-2:hover {
-  background-color: var(--primary-color);
-  color: var(--text-light);
-  transform: translateY(-2px);
-}
-.btn-small {
-  padding: 8px 18px;
-  font-size: 0.9rem;
-}
+@import url(../common/btn.css);
 
 /* --- Responsive Logo Size --- */
 .logo-image {
