--- a/demo/src/dashboard/dashboard.css
+++ b/demo/src/dashboard/dashboard.css
@@ -2,11 +2,7 @@
 @import url(../common/btn.css);
 
 body {
-    font-family: var(--font-family);
-    background-color: var(--background-light);
-    color: var(--text-dark);
     margin: 0;
-    line-height: 1.6;
 }
 
 /* main content margin */
@@ -19,7 +15,7 @@ body {
 
 /* --- Welcome Section --- */
 .welcome-section { display: flex; justify-content: space-between; align-items: center; margin-bottom: 2rem; }
-.welcome-message h1 { font-size: 2rem; font-weight: 600; margin: 0; }
+.welcome-message h1 { font-size: 2rem; font-weight: 600; margin: 0; color: var(--primary-color) }
 .user-info { display: flex; align-items: center; }
 .user-icon { font-size: 2.5rem; color: var(--secondary-color); margin-right: 1rem; }
 .user-details { display: flex; flex-direction: column; }
