--- a/client/src/common/color.css
+++ b/client/src/common/color.css
@@ -22,6 +22,12 @@
   --border-radius: 6px;
 }
 
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font-family: var(--font-family);
   line-height: 1.6;
