fixed: info display in review list

--- a/client/src/index/index.css
+++ b/client/src/index/index.css
@@ -1,13 +1,7 @@
-@import url(./common/color.css);
-@import url(./common/btn.css);
+@import url(../common/color.css);
+@import url(../common/btn.css);
+
 /* --- Global Styles & Variables --- */
-
-/* * {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-} */
-
 html {
   scroll-behavior: smooth;
 }
