fix: fixed th width

--- a/client/src/dashboard/dashboard.css
+++ b/client/src/dashboard/dashboard.css
@@ -89,6 +89,10 @@
     gap: 1rem;
 }
 
+.review-table th{
+    width: 20%;
+}
+
 /* --- View Toggle --- */
 .view-toggle .toggle-btn { 
     background: transparent; 
