--- a/client/src/index/index.css
+++ b/client/src/index/index.css
@@ -34,11 +34,11 @@ body {
   font-family: var(--font-family);
   line-height: 1.6;
   color: var(--text-dark);
-  background-color: var(--background-light);
+  /* background-color: var(--background-light); */
   overflow-x: hidden; /* Prevent horizontal scroll */
   margin: 0;
   padding: 0;
-  background-color: #FFFFFF;
+  /* background-color: #FFFFFF; */
   z-index: 0;
 }
 
